--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,34 @@ services:
   webserver:
     build: "."
     container_name: webserver
+    restart: always
     environment:
       - GRAPHITE_HOSTNAME=graphite
       - GRAPHITE_PLAINTEXT_PORT=2003
     ports:
       - 8080:8080
     depends_on:
-      - graphite
+      graphite:
+        condition: service_healthy
     networks:
       - todo-network
     
   graphite:
     image: graphiteapp/graphite-statsd
     container_name: graphite
+    restart: always
     ports:
       - 80:80
       - 2003-2004:2003-2004
       - 2023-2024:2023-2024
       - 8125:8125/udp
       - 8126:8126
-    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "netstat -an | grep -q 2003"]
+      interval: 10s
+      retries: 3
+      start_period: 30s
+      timeout: 10s
     networks:
       - todo-network
   
